# kivy_sailcommander

./: .gitignore  README.md  pyproject.toml
assets/: video_sail_commander.webm
final_files_sailcommander_working/: SailCommander copy.kv  main.py  sail_class.py
finally_stepwise_buildup_buidozer/: SailCommander.kv  main.py
minimum_example_for buildozer/: main.kv  main.py
sailcommander/: SailCommander.kv  command_config.yaml  command_scenarion_config.yaml  main.py  sail_class.py  sail_main.py
speech_recognition/speech_to_text/: main.py
speech_recognition/speech_to_text_2/: main.py  speech_to_text.kv
speech_to_text/: audiomain.kv
